# milogentic

./: .gitignore  README.md  pyproject.toml
src/agentic_app/: __init__.py  agent.py  amadeus.py  app.py  llm_groq.py  llm_stub.py  memory.py  rate_limit.py  tools.py
src/agentic_app/web/: index.html
src/agentic_app/web/static/: app.js  styles.css
tests/: test_agent_date_parsing.py  test_agent_smoke.py
