[project]
name = "agentic-app"
version = "0.1.0"
description = "Minimal agentic application (Agent + Tools + Memory + Rate limiting) with FastAPI. LLM is stubbed for local runs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115.6,<0.116.0",
  "uvicorn[standard]>=0.34.0,<0.35.0",
  "pydantic>=2.10.4,<3.0.0",
  "requests>=2.32.3,<3.0.0",
  "openai>=1.60.0,<2.0.0",
]

[project.scripts]
agentic-app = "agentic_app.app:main"

[dependency-groups]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "ruff>=0.8.4,<0.9.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
